# fsociety

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODERNIZATION_COMPLETE.md  MODERN_FEATURES.md  Makefile  QUICKSTART.md  README.md  README_2025.md  SETUP.md  UPGRADE_GUIDE.md  fsociety.py  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall
fsociety/: __init__.py  __main__.py  __version__.py  console.py
fsociety/.github/workflows/: ci.yml
fsociety/cloud_security/: __init__.py  cli.py
fsociety/core/: cache.py  executor.py  gpu_accelerator.py  logging_config.py  repo.py  validation.py
fsociety/examples/: basic_usage.py
fsociety/information_gathering/: s3scanner.py
fsociety/passwords/: hash_buster_modern.py
fsociety/tests/: test_core.py  test_gpu.py  test_integration.py
fsociety/tools/ai/: engine.py  exploit_assistant.py
fsociety/tools/api_security/: __init__.py
fsociety/tools/cloud_security/: __init__.py
fsociety/tools/core/: async_repo.py  cache.py  config.py  hosts.py  performance.py  usernames.py
fsociety/tools/information-gathering/: asynic-nmap.py
fsociety/tools/kubernetes_security/: __init__.py
fsociety/tools/passwords/: hash-buster.py
fsociety/tools/supply_chain/: __inti__.py
fsociety/tools/web3_security/: __init__.py
fsociety/web_apps/: cli.py  nuclei.py
